test/should_pass/hom_005.grg
actions hom_005;

rule r {
	pattern {
		x:Node -e:Edge-> y:Node -f:Edge-> z:Node;
		hom(e);
	}
	replace {
		x <-:Edge- y <-- z;
	}
}

