test/should_fail/hom_003.grg
rule r {
	pattern {
		x:Node -e:Edge-> y:Node -f:Edge-> z:Node;
		hom(f, y);
	}
	modify {}
}

